[tool.poetry]
name = "content-spport"
version = "0.1.0"
packages = []
description = ""
authors = ["leikou <leikou@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dashscope = "^1.23.0"
playwright = "^1.51.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
dotenv = "^0.9.9"
tqdm = "^4.67.1"
pendulum = "^3.0.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
